--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
        function($scope) {
         console.log(this)
         console.log($scope)
-          $scope.getLinkedInData();
+          // $scope.getLinkedInData();
        });
     }
   </script>
