--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="menu/menu.css">
+    <link rel="stylesheet" href="jobs/jobs.css">
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/4.1.1/firebase-app.js"></script>
@@ -40,6 +41,7 @@
     <script src="app.js"></script>
     <script src="profile/user.js"></script>
     <script src="menu/menu.js"></script>
+    <script src="jobs/jobs.js"></script>
 
     <base href="/">
 
