Added login, removed home

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="menu/menu.css">
     <link rel="stylesheet" href="jobs/jobs.css">
+    <link rel="stylesheet" href="login/login.css">
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/4.1.1/firebase-app.js"></script>
@@ -42,6 +43,7 @@
     <script src="profile/user.js"></script>
     <script src="menu/menu.js"></script>
     <script src="jobs/jobs.js"></script>
+    <script src="login/login.js"></script>
 
     <base href="/">
 
