loginpage for you

--- a/public/login/login.html
+++ b/public/login/login.html
@@ -1,4 +1,9 @@
-<div class="login">
-  <h1>Login</h1>
+<div class="loginWrapper">
+  <div class="buttonContainer">
+    <button type="button">I want to hire!</button>
+  </div>
+  <div class="buttonContainer">
+    <button type="button">I want a job!</button>
+  </div>
   <script type="in/Login"></script>
 </div>
