--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="menu/menu.css">
     <link rel="stylesheet" href="jobs/jobs.css">
     <link rel="stylesheet" href="login/login.css">
+    <link rel="stylesheet" href="profile/profile.css">
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/4.1.1/firebase-app.js"></script>
