--- a/public/menu/menu.html
+++ b/public/menu/menu.html
@@ -1,3 +1,3 @@
-<a ui-sref="profile">Profile</a>
-<a ui-sref="jobs">Jobs</a>
+<a ui-sref="profile">Create a job</a>
+<a ui-sref="jobs">Applicants</a>
 <a ui-sref="login">Login</a>
