--- a/public/login/login.html
+++ b/public/login/login.html
@@ -5,5 +5,6 @@
   <div class="buttonContainer">
     <button type="button">I want a job!</button>
   </div>
+  <button type="submit">Submit</button>
   <script type="in/Login"></script>
 </div>
