--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -1,3 +1,26 @@
-<div class="wrapper">
-  <h1>Profile</h1>
+<div class="profileWrapper">
+
+  <h1>Create a job</h1>
+
+  <div id="addJobContainer">
+    <div id="addJobTitleContainer">
+      <p>Title</p>
+      <input></input>
+    </div>
+
+    <div id="addJobSkillsContainer">
+      <p>Skills</p>
+      <input></input>
+    </div>
+  </div>
+
+  <button type="submit">Submit</button>
+
+  <div id="skillsListContainer">
+    <ul id="skillsList">
+      <li>Skills 1</li>
+      <li>Skills 2</li>
+    </ul>
+  </div>
+
 </div>
