--- a/public/jobs/jobs.html
+++ b/public/jobs/jobs.html
@@ -1,3 +1,21 @@
 <div class="wrapper">
-  <h1>Jobs</h1>
+
+  <h1>These are your top five matches</h1>
+  <div class = "candidate">
+    <h2> Candiate A </h2>
+    <p> weigthed rating 87 % </p>
+    <div class="callbutton">
+      <p>Contact applicant</p>
+
+    </div>
+  </div>
+
+  <div class = "candidate">
+    <h2> Candiate B </h2>
+    <p> weigthed rating 74 % </p>
+    <div class="callbutton">
+      <p>Contact applicant</p>
+
+    </div>
+  </div>
 </div>
