--- a/public/login/login.html
+++ b/public/login/login.html
@@ -1,9 +1,13 @@
 <div class="loginWrapper">
-  <div class="buttonContainer">
-    <button type="button">I want to hire!</button>
-  </div>
-  <div class="buttonContainer">
-    <button type="button">I want a job!</button>
+  <div class="Welcomebox">
+    <h1>Welcome to KAKE</h1>
+    <h2>What are you looking for?</h2>
+    <div class="buttonContainer">
+      <button type="button">An employee</button>
+    </div>
+    <div class="buttonContainer">
+      <button type="button">A job</button>
+    </div>
   </div>
   <script type="in/Login"></script>
 </div>
