--- a/public/login/login.html
+++ b/public/login/login.html
@@ -3,10 +3,8 @@
     <h1>Welcome to KAKE</h1>
     <h2>What are you looking for?</h2>
     <div class="buttonContainer">
-      <button type="button">An employee</button>
-    </div>
-    <div class="buttonContainer">
-      <button type="button">A job</button>
+      <button class="button">An employee</button>
+      <button class="button">A job</button>
     </div>
   </div>
   <button type="submit">Submit</button>
