--- a/public/login/login.html
+++ b/public/login/login.html
@@ -7,6 +7,6 @@
       <button class="button">A job</button>
     </div>
   </div>
-  <button type="submit">Submit</button>
-  <script type="in/Login"></script>
+  <!--<button type="submit">Submit</button>
+  <script type="in/Login"></script> -->
 </div>
