--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -1,23 +1,20 @@
-<<<<<<< HEAD
-<h1>Profile</h1>
-=======
 <div class="profileWrapper">
 
   <h1>Create a job</h1>
 
-  <div id="addJobContainer">
+  <form id="addJobForm">
     <div id="addJobTitleContainer">
       <p>Title</p>
-      <input></input>
+      <input class="addJobFormInput" value="Title" />
     </div>
 
     <div id="addJobSkillsContainer">
       <p>Skills</p>
-      <input></input>
+      <input class="addJobFormInput" value="What are a desirable skill?" />
     </div>
-  </div>
 
-  <button type="submit">Submit</button>
+    <button type="submit">Submit</button>
+  </form>
 
   <div id="skillsListContainer">
     <ul id="skillsList">
@@ -27,4 +24,3 @@
   </div>
 
 </div>
->>>>>>> 62ebc30858f3d09dc2045ae1e4fb154019efa7e3
