--- a/public/jobs/jobs.html
+++ b/public/jobs/jobs.html
@@ -2,18 +2,52 @@
 
   <h1>These are your top five matches</h1>
   <div class = "candidate">
+    <div class="inline">
     <h2> Applicant A </h2>
     <p> weigthed rating 87 % </p>
-    <div class="button">
+    </div>
+    <div class="contactbutton">
       <p> Contact! </p>
     </div>
   </div>
 
   <div class = "candidate">
-    <h2> Applicant B </h2>
-    <p> weigthed rating 74 % </p>
-    <div class="button">
+    <div class="inline">
+      <h2> Applicant B </h2>
+      <p> weigthed rating 74 % </p>
+    </div>
+    <div class="contactbutton">
       <p> Contact! </p>
     </div>
     </div>
+</div>
+
+<div class = "candidate">
+  <div class="inline">
+  <h2> Applicant C </h2>
+  <p> weigthed rating 71 % </p>
   </div>
+  <div class="contactbutton">
+    <p> Contact! </p>
+  </div>
+</div>
+
+<div class = "candidate">
+  <div class="inline">
+  <h2> Applicant D </h2>
+  <p> weigthed rating 62 % </p>
+  </div>
+  <div class="contactbutton">
+    <p> Contact! </p>
+  </div>
+</div>
+
+<div class = "candidate">
+  <div class="inline">
+  <h2> Applicant E </h2>
+  <p> weigthed rating 59 % </p>
+  </div>
+  <div class="contactbutton">
+    <p> Contact! </p>
+  </div>
+</div>
