lite mer profilepage

--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -1,22 +1,23 @@
 <div class="profileWrapper">
 
-  <h1>Create a job</h1>
+  <h1>Create a position</h1>
+  <p>Describe here what the employer should do with this page :)</p>
 
-  <form id="addJobForm">
+  <form class="addJobForm">
     <div id="addJobTitleContainer">
-      <p>Title</p>
-      <input class="addJobFormInput" value="Title" />
+      <p class="addJobFormLabel">Position Title</p>
+      <input class="addJobFormInput" />
     </div>
 
     <div id="addJobSkillsContainer">
-      <p>Skills</p>
-      <input class="addJobFormInput" value="What are a desirable skill?" />
+      <p class="addJobFormLabel">Skills</p>
+      <input class="addJobFormInput" />
     </div>
 
-    <button type="submit">Submit</button>
+    <button type="submit" class="button" id="addJobButton">Create position</button>
   </form>
 
-  <div id="skillsListContainer">
+  <div class="skillsListContainer">
     <ul id="skillsList">
       <li>Skills 1</li>
       <li>Skills 2</li>
