--- a/public/login/login.html
+++ b/public/login/login.html
@@ -10,12 +10,24 @@
   </div>
 
   <div class="Loginbox" ng-show="hideWelcome">
-    <h1>Login</h1>
-    <div> <h2>Username</h2> <input type="text">
-    <h2>Password</h2> <input type="text">
-    <script type="in/Login"></script>
+    <h1>Sign in</h1>
+    <form class="addLogin">
+      <div id="addUsername">
+        <h2 class="addLoginLabel">Username</h2>
+        <input class="addLoginInput" />
+      </div>
+
+      <div id="addPassword">
+        <h2 class="addLoginLabel">Password</h2>
+        <input class="addLoginInput" />
+      </div>
+
+      <div id="addLinkedIn">
+        <script type="in/Login"></script>
+      </div>
+
     <div class="buttonContainer">
-      <a class="button" ui-sref="profile">Login</a>
+      <a class="button" ui-sref="profile">Sign in</a>
     </div>
   </div>
 </div>
