add search on keywords

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
 
     <script src="app.js"></script>
     <script src="profile/user.js"></script>
+    <script src="profile/newJob.js"></script>
     <script src="menu/menu.js"></script>
     <script src="jobs/jobs.js"></script>
     <script src="login/login.js"></script>
