--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -1,4 +1,4 @@
-<div class="profileWrapper">
+<div class="profileWrapper" ng-controller="NewJobCtrl">
 
   <h1>Create a position</h1>
   <p>Describe here what the employer should do with this page :)</p>
@@ -11,17 +11,36 @@
 
     <div id="addJobSkillsContainer">
       <p class="addJobFormLabel">Skills</p>
-      <input class="addJobFormInput" />
+      <input class="addJobFormInput" ng-model="keyword" ng-change="searchKeyword(keyword)"/>
+      <p class="addJobFormLabel"></p>
+      <div class="searchResults" ng-if="searchResult">
+        <button class="resultValue" ng-repeat="result in searchResult" ng-click="addSkill(result)">{{result.word}}</button>
+      </div>
     </div>
 
     <button type="submit" class="button" id="addJobButton">Create position</button>
   </form>
 
   <div class="skillsListContainer">
-    <ul id="skillsList">
-      <li>Skills 1</li>
-      <li>Skills 2</li>
+<!--     <p><b>Skills</b></p>
+    <ul id="skillsList" ng-repeat="skill in newJob.skills" ng-if="skill.type ==='skill'"> -->
+    <ul id="skillsList" ng-repeat="skill in newJob.skills">
+      <li>{{skill.word}}</li>
     </ul>
+<!--     <p><b>Personality Traits</b></p>
+    <ul id="skillsList" ng-repeat="skill in newJob.skills" ng-if="skill.type ==='quality'"> 
+    <ul id="skillsList" ng-repeat="skill in newJob.skills">
+      <li>{{skill.word}}</li>
+    </ul>-->
+  </div>
+
+  <h2>Skills</h2>
+  <div ng-repeat="(key, value) in keywords" ng-if="value.type==='skill'">
+    {{value.word}}
+  </div>
+  <h2>Personality Traits</h2>
+  <div ng-repeat="(key, value) in keywords" ng-if="value.type==='quality'">
+    {{value.word}}
   </div>
 
 </div>
