--- a/public/login/login.html
+++ b/public/login/login.html
@@ -32,7 +32,7 @@
       </div>
 
     <div class="buttonContainer">
-      <a class="button" ui-sref="profile">Sign in</a>
+      <a class="button" ui-sref="profile" ng-click="login()">Sign in</a>
     </div>
   </div>
 </div>
