--- a/public/login/login.html
+++ b/public/login/login.html
@@ -24,7 +24,7 @@
 
       <div id="addPassword">
         <h2 class="addLoginLabel">Password</h2>
-        <input class="addLoginInput" />
+        <input type="password" class="addLoginInput" />
       </div>
 
       <div id="addLinkedIn">
