--- a/public/jobs/jobs.html
+++ b/public/jobs/jobs.html
@@ -1,9 +1,8 @@
 <div class="jobsWrapper">
   <h1>These are your top five matches</h1>
   <p>According to the skills you listed for this position,
-    these are the candidates best suited.
-    Click the contact button to connect with what might be your next employee.
-  </p>
+    these are the candidates best suited.</p>
+  <p>Click the contact button to connect with what might be your next employee.</p>
   <div class = "candidate">
     <div class="inline">
       <h2> Applicant A </h2>
