--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -1,7 +1,7 @@
 <div class="profileWrapper" ng-controller="NewJobCtrl">
 
   <h1>Create a position</h1>
-  <p>Describe here what the employer should do with this page :)</p>
+  <p>Create a position you are currently hiring for by adding a title and the skills needed of the future employee.</p>
 
   <form class="addJobForm">
     <div id="addJobTitleContainer">
