--- a/public/jobs/jobs.html
+++ b/public/jobs/jobs.html
@@ -45,7 +45,7 @@
 
   <div class="popup" ng-show="popup">
     <div class="messageBox">
-      <h1>Congratulations to your match!</h1>
+      <h1>Congratulations on your match!</h1>
       <p>We have notified applicant {{person}}</p>
       <p>We hope you will like each other</p>
       <a href="#" ng-click="popup=false"> Thanks!</a>
