footer! kul! hurra!

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="jobs/jobs.css">
     <link rel="stylesheet" href="login/login.css">
     <link rel="stylesheet" href="profile/profile.css">
+    <link rel="stylesheet" href="footer/footer.css">
 
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -29,7 +30,7 @@
         onLoad: onLinkedInLogin
         authorize: true
     </script>
-    
+
 
     <script src="app.js"></script>
     <script src="profile/user.js"></script>
@@ -37,6 +38,7 @@
     <script src="menu/menu.js"></script>
     <script src="jobs/jobs.js"></script>
     <script src="login/login.js"></script>
+    <script src="footer/footer.js"></script>
     <script src="services/FirebaseService.js"></script>
 
 
@@ -57,5 +59,6 @@
     </script>
     <menu></menu>
     <div ui-view></div>
+    <footer></footer>
   </body>
 </html>
