--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -10,7 +10,7 @@
     </div>
 
     <div id="addJobSkillsContainer">
-      <p class="addJobFormLabel">Skills/</p>
+      <p class="addJobFormLabel">Skills</p>
       <input class="addJobFormInput" ng-model="keyword" ng-change="searchKeyword(keyword)"/>
       <p class="addJobFormLabel"></p>
       <div class="searchResults" ng-hide="!searchResult || keyword.length < 1 ">
