--- a/public/footer/footer.html
+++ b/public/footer/footer.html
@@ -1,7 +1,7 @@
 <div class="footerLeft">
   <div class="infoContainer">
     <h3>About</h3>
-    <p>This page is made to match and connect</p>
+    <p>This service is made to match and connect</p>
     <p>applicants and employees based on skills.</p>
   </div>
 </div>
